tdf#112292: Revert "use rtl::Reference in SwDocFac"

This reverts commit a754294ac7a902fe96fbbd6b8b6824a360d6b248 which
caused the memory leak reported.
Master will be fixed by a different approach.

Change-Id: I6a87006109d4eb69ec40aea57ab2e83dcdeb2f8b
Reviewed-on: https://gerrit.libreoffice.org/43128
Reviewed-by: Michael Stahl <mstahl@redhat.com>
Tested-by: Noel Grandin <noel.grandin@collabora.co.uk>